--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,10 @@
 body {
     font-family: 'Lato', sans-serif;
 }
-
+.navbar{
+    background-color: #999999;
+    height: 100px;
+}
 .row {
     width: 100%;
 }
